--- a/styles/main.scss
+++ b/styles/main.scss
@@ -218,7 +218,7 @@ input {
   .main__mb-wrap {
     position: relative;
     padding-bottom: 53px;
-    background: url('../imgs/1.png');
+    background: url('../imgs/1.webp');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
