--- a/styles/header.scss
+++ b/styles/header.scss
@@ -19,11 +19,15 @@
     height: 51px;
     background-color: white;
     border-radius: 10px;
-  }
 
-  .header__btn-link {
     background: linear-gradient(90deg, #579AFF 0%, #574DCC 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    transition: all 0.3s;
+
+    &:hover {
+      box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.3);
+      scale: 1.02;
+    }
   }
 }
